crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__method__too_many_arguments.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/method/too_many_arguments.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (block
      (var a (local @3) 1.0)
      (expr (call +4 (attr true method) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3) (local a @3)))))

----- stderr -----
